<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/titleApp"
        android:id="@+id/tbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_drwr"
        tools:openDrawer="start">

        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/uname_main"
                        android:gravity="center"
                        android:text=""
                        android:hint="@string/hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center|bottom"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    >

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progress_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/dateSelectedText"
                            android:textSize="25sp"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/picked_date"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:textSize="25sp"
                            android:text="Date selected"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/datePickerBtn"
                            android:text="@string/datePickerBtn"
                            android:layout_weight="1"
                            android:onClick="showPicker"
                            />
                        <Button
                            android:id="@+id/fetchDateContent"
                            android:text="@string/fetchDateContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />
                    </LinearLayout>

                    <Button
                        android:id="@+id/FavThisImage"
                        android:text="@string/FavThisImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_image_main"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/layout_title"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/headingMain"
                        android:id="@+id/headingMain"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"


                        />
                    <TextView
                        android:id="@+id/titleMain"
                        android:layout_width="wrap_content"
                        android:text="@string/titleMain"
                        android:layout_height="wrap_content"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:id="@+id/date_layout_main"
                    android:layout_width="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dateMain"
                        android:text="@string/dateMain"
                        />
                    <TextView
                        android:id="@+id/dateMainContent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateMainContent"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:id="@+id/url_layout_main"
                    android:layout_width="match_parent"
                    >

                    <TextView
                        android:id="@+id/hdUrlMain"
                        android:text="@string/hdUrlMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/hdUrlMainContent"
                        android:layout_width="wrap_content"
                        android:text="@string/hdUrlMainContent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:id="@+id/explan_layout"
                    android:layout_width="match_parent"
                    >

                    <TextView
                        android:layout_height="wrap_content"
                        android:text="@string/headingExplanation"
                        android:id="@+id/headingExplanation"
                        android:layout_width="wrap_content"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/explanationMainContent"
                        android:text="@string/explanationMainContent"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/view_navigation"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/toolbar_layout"
                app:menu="@menu/nav_menu"
                android:layout_width="wrap_content"
                />
        </androidx.drawerlayout.widget.DrawerLayout>
    </LinearLayout>