<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountUserActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbar"
        app:title="@string/titleAcc"
        />
    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_drwr"

        tools:openDrawer="start">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/edit_uname"
                android:layout_height="wrap_content"
                android:hint="@string/unameInput"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                />
            <Button
                android:id="@+id/saveUname"
                android:text="@string/saveUname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/view_navigation"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/nav_menu"
            app:headerLayout="@layout/toolbar_layout"
            />
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>